# Tangram

./: .gitignore  README.md
Samples/BuildChromium/: BuildChromium.csproj  BuildChromium.exe.tangram  BuildChromium.htm  Form1.Designer.cs  Form1.cs  Form2.Designer.cs  Form2.cs  MDIParent1.Designer.cs  MDIParent1.cs  Program.cs
Samples/TangramWinFormLib/: TangramMDIForm.Designer.cs  TangramMDIForm.cs  TangramMDIForm2.Designer.cs  TangramMDIForm2.cs  TangramMdiChildForm.Designer.cs  TangramMdiChildForm.cs  TangramMdiChildForm1.Designer.cs  TangramMdiChildForm1.cs  TangramMdiChildForm2.Designer.cs  TangramMdiChildForm2.cs  TangramMdiChildForm3.Designer.cs  TangramMdiChildForm3.cs  TangramUserCtrl.Designer.cs  TangramUserCtrl.cs  TangramWinForm.Designer.cs  TangramWinForm.cs  TangramWinFormLib.csproj
Samples/WindowsFormsApp1/: App1.xml  Form1.Designer.cs  Form1.cs  Form2.Designer.cs  MDIParent1.Designer.cs  NtpCtrl.Designer.cs  NtpCtrl.cs  Program.cs  WindowsFormsApp1.csproj  WindowsFormsApp1.htm  windowsformsapp1.exe.tangram
Source/CommonFile/: ChromeProxy.h  ChromeRenderDomProxy.h  CommonFile.vcxitems  Tangram.c  Tangram.h  Tangram.idl  Tangram2.idl  TangramChromeProxy.h  TangramCommon.h  TangramCoreEvents.cpp  TangramCoreEvents.h  tangrambase.h
Source/Tangram/: NodeWnd.cpp  NodeWnd.h  SplitterWnd.cpp  SplitterWnd.h  TabbedView.cpp  (+29 more)
Source/chromium_patches/74.0.3729.108/chrome_proxy/com_server/: BUILD.gn  ChromeApp.rgs  ChromeAppServer.dlldata.c  ChromeAppServer.h  ChromeAppServer.idl  TangramCtrl.rgs  resource.h
chromium_root/: .gitignore  Generate_Build.bat
(+265 files in other folders)
